[gd_scene load_steps=5 format=2]

[ext_resource path="res://JumpingTheiere.gd" type="Script" id=1]
[ext_resource path="res://objets/TheiereShadow.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/theiere.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 8.83929 )

[node name="JumpingTheiere" type="Area2D" groups=[
"JumpingThing",
]]
input_pickable = false
script = ExtResource( 1 )
timeOnGround = 1.0
Shadow = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.825012, -1.358 )
scale = Vector2( 1.00005, 0.98302 )
texture = ExtResource( 3 )
offset = Vector2( 0, -225 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 35.6467, -5.74672 )
scale = Vector2( 16.6614, 4.94435 )
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_JumpingTheiere_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_JumpingTheiere_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_JumpingTheiere_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_JumpingTheiere_body_exited"]
